<resources>
    <string name="app_name">Cafeteria_BlueMeth</string>
    <string name="email_input_text">Email</string>
    <string name="password_input_text">Password</string>
    <string name="nickname_input_text">Password</string>
    <string name="login_text">Inicia sesión y disfruta!</string>
    <string name="login_button_text">Inicia sesión!</string>
    <string name="login_to_register_text">No estás registrado? <u>Regístrate</u></string>
    <string name="register_text">Únete a nosotros!</string>
    <string name="register_button_text">Regístrate</string>
    <string name="register_to_login_text">Ya tienes una cuenta? <u>Inicia sesión</u></string>
    <string name="first_dish">1r PLATO</string>
    <string name="second_dish">2ndo PLATO</string>
    <string name="third_dish">POSTRE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>